--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,7 +226,7 @@
         </defs>
       </svg>
       <h1>hey Team welcome</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <p>Congratulations! 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
