--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,8 +225,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>hey Team welcome</h1>
-      <p>Congratulations! 🎉</p>
+      <h1>Deployed from local Using webHook</h1>
+      <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
